--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,12 +6,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
+    "build": "npm install && npm install --prefix Frontend && npm run build"
   },
   "keywords": [
     "MERN"
   ],
-  "author": "Akhilesh",
+  "author": "Rohit",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
