--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,5 @@
 PORT=5002
-MONGODB_URI = mongodb://localhost:27017/realtimechatapp
-# MONGODB_URI=mongodb+srv://pathakankit6888:zjP5cc6Lpjdo0CuA@cluster0.uz138.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI = mongodb+srv://rohitsvt2003:ndgeDf14nDvLp4WF@chat-db.t9bbdlq.mongodb.net/?retryWrites=true&w=majority&appName=chat-db
 JWT_TOKEN= iFt5d+oIl9/+oRxEggRpgj2XGBUi1n+px9Ag/5TEUj4=
 
 NODE_ENV = "production"
