--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "nodemon index.js",
-  "dev": "nodemon index.js",
-  "build": "npm install --prefix Frontend && npm run build --prefix Frontend"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
+    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+  },
   "keywords": [
     "MERN"
   ],
@@ -23,7 +23,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.9",
     "socket.io": "^4.7.5"
   }
 }
