--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js",
-    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node index.js", 
+  "dev": "nodemon index.js",
+  "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+},
   "keywords": [
     "MERN"
   ],
