--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node index.js", 
-  "dev": "nodemon index.js",
-  "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+  "start": "node index.js",
+  "dev": "nodemon index.js"
 },
   "keywords": [
     "MERN"
